Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-838

idle_session_timeout: Impala timeout session prematurely

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • Impala 1.2.3
    • Impala 1.3
    • None
    • None

    Description

      impala-server.cc uses this code to compute the timeout:

      if (now - last_accessed <= FLAGS_idle_session_timeout) continue;

      The problem is that "last_accessed" is in ms, but FLAGS_idle_session_timeout is in sec.

      Attachments

        Activity

          People

            henryr Henry Robinson
            alan@cloudera.com Alan Choi
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: