tests/custom_cluster/test_query_expiration.py
@@ -26,17 +26,23 @@ class TestQueryExpiration(CustomClusterTestSuite):
   """Tests query expiration logic"""
 
   @pytest.mark.execute_serially
-  @CustomClusterTestSuite.with_args("--idle_query_timeout=1")
+  @CustomClusterTestSuite.with_args("--idle_query_timeout=5")
   def test_query_expiration(self, vector):
     """Confirm that single queries expire if not fetched"""
     impalad = self.cluster.get_any_impalad()
     client = impalad.service.create_beeswax_client()
     num_expired = impalad.service.get_metric_value('impala-server.num-queries-expired')
     handle = client.execute_async("SELECT SLEEP(3000000)")
-
+    before = time()
+    sleep(2)
+    assert num_expired == impalad.service.get_metric_value(
+      'impala-server.num-queries-expired')
     impalad.service.wait_for_metric_value('impala-server.num-queries-expired',
                                           num_expired + 1)
 
+    # Check that we didn't wait too long to be expired (double the timeout is sufficiently
+    # large to avoid most noise in measurement)
+    assert time() - before < 10
     assert client.get_state(handle) == client.QUERY_STATES['EXCEPTION']
 
     # A properly executed query should not be cancelled
