tests/custom_cluster/test_session_expiration.py
@@ -1,0 +1,41 @@
+#!/usr/bin/env python
+# Copyright (c) 2012 Cloudera, Inc. All rights reserved.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+# http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+#
+# Tests for query expiration.
+
+import pytest
+import threading
+from tests.common.custom_cluster_test_suite import CustomClusterTestSuite
+from tests.common.custom_cluster_test_suite import NUM_SUBSCRIBERS, CLUSTER_SIZE
+from time import sleep, time
+from tests.beeswax.impala_beeswax import ImpalaBeeswaxException
+
+class TestSessionExpiration(CustomClusterTestSuite):
+  """Tests query expiration logic"""
+
+  @pytest.mark.execute_serially
+  @CustomClusterTestSuite.with_args("--idle_session_timeout=6")
+  def test_session_expiration(self, vector):
+    impalad = self.cluster.get_any_impalad()
+    num_expired = impalad.service.get_metric_value("impala-server.num-sessions-expired")
+    client = impalad.service.create_beeswax_client()
+    # Sleep for half the expiration time to confirm that the session is not expired early
+    # (see IMPALA-838)
+    sleep(3)
+    assert num_expired == impalad.service.get_metric_value(
+      "impala-server.num-sessions-expired")
+    # Wait for session expiration
+    impalad.service.wait_for_metric_value(
+      "impala-server.num-sessions-expired", num_expired + 1)
